--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,15 @@
 
 /*-------------------------------------------  general -------------------------------------------------------*/
 body{
+	width:100%;
+	margin:0 auto;
 	font-size: 62.5%;
 	font-family: helvetica, arial, sans-serif;
 	color:#545257; /*changes color of the whole text*/
 	margin-top: 0;
 }
-#wrapper{
+/*#wrapper{
+	width:100%;
 	width:960px;
 	margin: 0 auto;
 	padding-left: 1%;
@@ -15,11 +18,69 @@ body{
 	-moz-box-shadow:    0px 0px 5px #ececec;
 	box-shadow:         0px 0px 5px #ececec;
 
-}
+}*/
 /*-------------------------------------------  header -------------------------------------------------------*/
 
 header{
+	height:50px;
+	background:#000;
 	border-bottom: 1px solid #bbb8bf; /*changes color of border under project name*/
+}
+#top{
+	overflow:auto;
+	max-width:1130px;
+	margin:0 auto;
+	height:50px;
+	line-height:50px;
+}
+#top h1{
+	background-image:url("../images/logo.png");
+	background-repeat:no-repeat;
+	background-position:center;
+	text-indent:-999em;
+	width:220px;
+	height:50px;
+	float:left;
+	padding:0;
+	/*margin:0 20px 0 0;
+	padding:0;
+	float:left;
+	font-family: 'Ubuntu', sans-serif;
+	font-weight:500;
+	color:#fff;
+	letter-spacing:1px;*/
+}
+#top form{
+	float: left;
+    background: #484848;
+    line-height: normal;
+    margin: 8px 0 0 0;
+}
+#top a{
+	float:right;
+}
+input[type="text"]{
+	height: 30px;
+    background: none;
+    border: none;
+    margin: 1px 0 0 10px;
+    font-family: 'Ubuntu', sans-serif;
+}
+input[type="text"]:focus{
+	outline:none;
+}
+input[type="submit"]:hover{
+	cursor: pointer;
+}
+input[type="submit"]{
+	background: transparent url("../images/icon.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    text-indent: -999em;
+    width: 16px;
+    height: 16px;
+    border: none;
+    margin:0 0 0 10px;
 }
 h1{
 	margin-top: 0;
@@ -60,10 +121,28 @@ td:first-child{
 	/*border-right: 1px solid #6a7680;*/
 }
 /*-------------------------------------------  top section-------------------------------------------------------*/
+.feature{
+	background:url("../images/Wave.jpg");
+	background-size:cover;
+	background-repeat:no-repeat;
+	background-position:center 0;
+	height:500px;
+}
+.slogan{
+	width:800px;
+	margin:0 auto;
+	padding:150px 0;
+	text-align:center;
+}
+.slogan h1{
+	font-size:60px;
+	color:#ffffff;
+}
 .main{
-
 	overflow: auto;
-	/*border-bottom: 1px solid #bbb8bf;*/
+	border-bottom: 1px solid #bbb8bf;
+	max-width:1130px;
+	margin:0 auto;
 }
 .main p{
 	width: 67.5%;
@@ -83,6 +162,8 @@ figure img{
 .sec{
 	clear: both;
 	margin-top: 40px;
+	max-width:1130px;
+	margin:0 auto;
 	
 }
 
