--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ td:first-child{
 }
 /*-------------------------------------------  top section-------------------------------------------------------*/
 .feature{
-	background:url("../images/Wave.jpg");
+	background:url("../images/Bahamas.jpg");
 	background-size:cover;
 	background-repeat:no-repeat;
 	background-position:center 0;
@@ -135,8 +135,17 @@ td:first-child{
 	text-align:center;
 }
 .slogan h1{
+	font-family: 'Ubuntu', sans-serif;
+	font-weight:500;
 	font-size:60px;
 	color:#ffffff;
+}
+.slogan p{
+	color:#fff;
+	border:1px solid #fff;
+	padding:10px 15px 10px 15px;
+	width:200px;
+	margin:0 auto;
 }
 .main{
 	overflow: auto;
