--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ td:first-child{
 }
 /*-------------------------------------------  top section-------------------------------------------------------*/
 .feature{
-	background:url("../images/Bahamas.jpg");
+	background:url("../images/Bahamas2.jpg");
 	background-size:cover;
 	background-repeat:no-repeat;
 	background-position:center 0;
