--- a/css/styles.css
+++ b/css/styles.css
@@ -161,19 +161,26 @@ td:first-child{
 	overflow: auto;
 	border-bottom: 1px solid #bbb8bf;
 	max-width:1130px;
-	margin:0 auto;
+	margin:30px auto;
+}
+.main h2{
+	font-size:30px;
 }
 .main p{
 	width: 67.5%;
 	float: left;
 	font-size: 1.4em;
+	line-height: 30px;
+    letter-spacing: .21px;
 
 }
 .main figure{
 	float: right;
-	margin: 15px 0 20px 0;
+	margin: 0px 0 20px 0;
 	width: 30%;
-
+}
+.main figure figcaption{
+	padding-left:20px;
 }
 figure img{
 	width: 100%;
